Name:                vty-ui-extras
Version:             0.3
Synopsis:
  Extra vty-ui functionality not included in the core library

Description:
  Extra vty-ui functionality not included in the core library

Category:            User Interfaces
Author:              Jonathan Daugherty <jtd@galois.com>
Maintainer:          Jonathan Daugherty <jtd@galois.com>
Build-Type:          Simple
License:             BSD3
License-File:        LICENSE
Cabal-Version:       >= 1.8

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/vty-ui-extras.git

Library
  Build-Depends:
    base >= 4 && < 5,
    vty >= 5.1,
    vty-ui >= 1.6,
    text >= 0.11,
    text-icu

  GHC-Options:       -Wall

  Hs-Source-Dirs:    src
  Exposed-Modules:
      Graphics.Vty.Widgets.Extras.Text
